Kubernetes/bases/applications/symfony/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-auth
#  annotations:
#    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
    - host: api.dev.m-dv.nl
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: portfolio-auth
                port:
                  name: http
